fixed display
refresh button overlapping with messages

--- a/Resources/Public/Css/datec_timeline_style.css
+++ b/Resources/Public/Css/datec_timeline_style.css
@@ -73,7 +73,6 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	margin-right: 5px;
-	margin-bottom: -10px;
 	background-color: #f5f5f5;
 	box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
 	cursor: pointer;
